# opendeck-sleepmode

./: .gitignore  Cargo.toml  README.md
src/: main.rs
