[package]
name = "sleepmode"
version = "1.0.0"
edition = "2021"

[dependencies]
openaction           = "2"
tokio                = { version = "1", features = ["full"] }
tokio-tungstenite    = "0.26"
tungstenite          = "0.26"
futures-util         = "0.3"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
async-trait          = "0.1"
chrono               = { version = "0.4", features = ["clock"] }
